--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -4,9 +4,10 @@
   </head>
   <body bgcolor="#B5B5B5">
     <center>
-      <div style="" width="500px" height="500px">
+      <h1>myInterns</h1>
+      <div style="border: 2px solid; border-radius: 25px; background-color:#E8E8E8; height:150px; width:500px; padding: 100px;" >
         <form action="<?php echo $this->baseUrl; ?>/index/dologin" method="POST">
-          <table>
+          <table cellpadding="15">
             <tr>
               <td>Username</td>
               <td><input type="text" name="txtuser" /></td>
@@ -17,11 +18,11 @@
             </tr>
             <?php if(isset($this->error)): ?>
               <tr>
-                <td colspan=2 style="color: red;"><?php echo $this->error; ?></td>
+                <td colspan=2 style="color: red; text-align:center;"><?php echo $this->error; ?></td>
               </tr>
             <?php endif; ?>
             <tr>
-              <td colspan=2><input type="submit" value="Submit" /><input type="reset" value="Reset" /></td>
+              <td colspan=2><center><input type="submit" value="Submit" /><input type="reset" value="Reset" /></center></td>
             </tr>
           </table>
         </form>
